[mobile][fix] overflow title

--- a/frappe/public/css/docs.css
+++ b/frappe/public/css/docs.css
@@ -48,7 +48,7 @@
 }
 @media (max-width: 767px) {
   .navbar-desk {
-    width: 40% !important;
+    width: 50% !important;
   }
 }
 #search-modal .modal-dialog,
@@ -197,7 +197,7 @@
   display: inline-block;
 }
 .toggle-sidebar {
-  margin-right: 15px;
+  margin-right: 10px;
 }
 .navbar-default .navbar-nav > li > a,
 .navbar-default .navbar-brand {
