--- a/frappe/public/less/mobile.less
+++ b/frappe/public/less/mobile.less
@@ -92,6 +92,12 @@ body {
 			max-width: 150px;
 			white-space: nowrap;
 			overflow: hidden;
+
+			a {
+				width: 100px;
+				overflow: hidden;
+				text-overflow: ellipsis;
+			}
 		}
 	}
 
@@ -112,6 +118,7 @@ body {
 
 	.navbar-nav {
 		margin: 0px;
+		margin-right: -15px;
 	}
 
 	.sidebar .form-group {
