--- a/frappe/public/less/navbar.less
+++ b/frappe/public/less/navbar.less
@@ -59,7 +59,7 @@
 
 @media (max-width: 767px) {
 	.navbar-desk {
-		width: 40% !important;
+		width: 50% !important;
 	}
 }
 
@@ -225,7 +225,7 @@
 }
 
 .toggle-sidebar {
-	margin-right: 15px;
+	margin-right: 10px;
 }
 
 .navbar-default .navbar-nav > li > a,
